Fix query param ranges
